Fixes needed/verified on Ubuntu16 & Fedora 25.

--- a/pillar.example
+++ b/pillar.example
@@ -1,4 +1,5 @@
-sqldeveloper_home: /opt/sqldeveloper
+orahome: /opt/oracle/12_2
+oracle_release: 12_2
 sqldeveloper:
   release: 4
   minor: 2
@@ -8,7 +9,7 @@ sqldeveloper:
   dl_opts: --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie"
   unpack_opts:
   archive_type: zip
-  prefix: /usr/share/oracle
-  sqldeveloper_real_home: /usr/share/oracle/sqldeveloper_4_2
+  prefix: /usr/share/oracle/12_2
+  sqldeveloper_real_home: /usr/share/oracle/12_2/sqldeveloper_4_2
   sqldeveloper_symlink: /usr/bin/sqldeveloper
-  sqldeveloper_realcmd: /opt/sqldeveloper/sqldeveloper
+  sqldeveloper_realcmd: /opt/oracle/12_2/sqldeveloper/bin/sqldeveloper
