--- a/pillar.example
+++ b/pillar.example
@@ -1,6 +1,8 @@
 oracle_home: /opt/oracle/12_2
 oracle_release: 12_2
 sqldeveloper:
+  major: 4
+  minor: 2
   version: 4.2.0.17.089.1709
   source_url: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip
   ##source_hash: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip.sha256
