--- a/pillar.example
+++ b/pillar.example
@@ -1,19 +1,23 @@
-oracle_home: /opt/oracle/12_2
+orahome: /opt/oracle/12_2
 oracle_release: 12_2
+#default_user: undefined
 sqldeveloper:
-  major: 4
-  minor: 2
+  #default_user: undefined
+  release: 4
+  major: 2
+  minor: 0
   version: 4.2.0.17.089.1709
   source_url: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip
-  ##source_hash: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip.sha256
-  source_hash: md5=158f54967e563a013b9656918e628427 
-  connections_url: undefined
-  dl_opts: --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie"
+  ### source_hash: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip.sha256
+  source_hash: md5=158f54967e563a013b9656918e628427
+  #dl_opts: --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie"
+  dl_opts: -s
   unpack_opts: o
-  connections_url: undefined
   archive_type: zip
+  connections_url: undefined
+  symlink: /usr/bin/sqldeveloper
   prefix: /usr/share/oracle/12_2
   real_home: /usr/share/oracle/12_2/sqldeveloper
   realcmd: /usr/share/oracle/12_2/sqldeveloper/bin/sqldeveloper
-  symlink: /usr/bin/sqldeveloper
   alt_priority: 30
+
