--- a/pillar.example
+++ b/pillar.example
@@ -1,26 +1,28 @@
-orahome: /opt/oracle/12_2
-oracle_release: 12_2
-default_user: undefined_user
 sqldeveloper:
-  default_user: undefined_user
-  release: 4
-  major: 2
-  minor: 0
-  version: 4.2.0.17.089.1709
-  source_url: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip
-  ### source_hash: http://download.oracle.com/otn/java/sqldeveloper/sqldeveloper-4.2.0.17.089.1709-no-jre.zip.sha256
-  source_hash: md5=158f54967e563a013b9656918e628427
-  #dl_opts: --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie"
-  dl_opts: -s
-  dl_retries: 2
-  unpack_opts: o
-  archive_type: zip
-  prefs_url: undefined
-  prefs_path: undefined
-  connections_url: undefined
-  symlink: /usr/bin/sqldeveloper
-  prefix: /usr/share/oracle/12_2
-  realhome: /usr/share/oracle/12_2/sqldeveloper
-  realcmd: /usr/share/oracle/12_2/sqldeveloper/bin/sqldeveloper
-  alt_priority: 30
+  oracle:
+    #'home: /opt/oracle/12_2' is default oracle_home.
+    # You must set valid uri terminating in '/'
+    uri: http://download.example.com/oracle/sqldeveloper/
+    # See http://www.oracle.com/technetwork/developer-tools/sql-developer/downloads/index.html
+    version: 17.3.1.279.0537
+    md5:
+      # no-jre (linux/windows)
+      sqldeveloper: md5=158f54967e563a013b9656918e628427
+         #latest: 'sqldeveloper': 'md5=5e077af62c1c5a526055cd9f810a3ee0'
+      # macos.x64
+      sqldeveloper: md5=2969c67ea5b856655adff9b8695746f1
+      # all platforms
+      sqlcl: md5=65862f2a970a363a62e1053dc8251078
+  linux:
+    # Increase priority for every version installed
+    priority: 190
+  dl:
+    retries: 1
+    interval: 30
+  prefs:
+    # See: http://www.thatjeffsmith.com/archive/2014/05/migrating-oracle-sql-developer-connections-with-passwords/
+    user: undefined_user
+    xmlurl: undefined
+    xmldir: undefined
+    xmlfile: connections-with-password.xml
 
