--- a/pillar.example
+++ b/pillar.example
@@ -1,18 +1,13 @@
 sqldeveloper:
   oracle:
-    #'home: /opt/oracle/12_2' is default oracle_home.
-    # You must set valid uri terminating in '/'
-    uri: http://download.example.com/oracle/sqldeveloper/
-    # See http://www.oracle.com/technetwork/developer-tools/sql-developer/downloads/index.html
-    version: 17.3.1.279.0537
+    # Valid URI terminating in '/' must be given.
+    uri: http://example.com/oracle/sqldeveloper/
+    # See products http://www.oracle.com/technetwork/developer-tools/sql-developer/downloads/index.html
+    version: 4.2.0.17.089.1709
+    pkgs: ['sqldeveloper']
     md5:
       # no-jre (linux/windows)
       sqldeveloper: md5=158f54967e563a013b9656918e628427
-         #latest: 'sqldeveloper': 'md5=5e077af62c1c5a526055cd9f810a3ee0'
-      # macos.x64
-      sqldeveloper: md5=2969c67ea5b856655adff9b8695746f1
-      # all platforms
-      sqlcl: md5=65862f2a970a363a62e1053dc8251078
   linux:
     # Increase priority for every version installed
     priority: 190
@@ -20,9 +15,9 @@ sqldeveloper:
     retries: 1
     interval: 30
   prefs:
-    # See: http://www.thatjeffsmith.com/archive/2014/05/migrating-oracle-sql-developer-connections-with-passwords/
     user: undefined_user
-    xmlurl: undefined
-    xmldir: undefined
+    # See: http://www.thatjeffsmith.com/archive/2014/05/migrating-oracle-sql-developer-connections-with-passwords/
+    xmlurl:
+    xmldir:
     xmlfile: connections-with-password.xml
 
