--- a/pillar.example
+++ b/pillar.example
@@ -1,6 +1,6 @@
 sqldeveloper:
   oracle:
-    # Valid URI terminating in '/' must be given.
+    # Valid URI terminating with slash is needed.
     uri: http://example.com/oracle/sqldeveloper/
     # See products http://www.oracle.com/technetwork/developer-tools/sql-developer/downloads/index.html
     version: 4.2.0.17.089.1709
@@ -10,7 +10,7 @@ sqldeveloper:
       sqldeveloper: md5=158f54967e563a013b9656918e628427
   linux:
     # Increase priority for every version installed
-    priority: 190
+    altpriority: 190
   dl:
     retries: 1
     interval: 30
