--- a/pillar.example
+++ b/pillar.example
@@ -3,12 +3,17 @@ sqldeveloper:
     # Valid URI terminating with slash is needed.
     uri: http://example.com/oracle/sqldeveloper/
     # See products http://www.oracle.com/technetwork/developer-tools/sql-developer/downloads/index.html
-    version: 4.2.0.17.089.1709
+    version: 17.3.1.279.0537
     pkgs: ['sqldeveloper']
     md5:
-      # no-jre (linux/windows)
-      sqldeveloper: md5=158f54967e563a013b9656918e628427
-  linux:
+    {% if grains.os == 'MacOS' %}
+      sqldeveloper: md5=2969c67ea5b856655adff9b8695746f1
+    {% else %}
+      # linux/windows
+      sqldeveloper: md5=5e077af62c1c5a526055cd9f810a3ee0
+    {% endif %}
+      sqlcl: md5=65862f2a970a363a62e1053dc8251078
+  #linux:
     #Enable Debian alternatives feature by setting nonzero 'altpriority' value here.
     #Increase same value on each subsequent software installation.
     #altpriority: 170
