Get group from pillar or id command

--- a/sqldeveloper/defaults.yaml
+++ b/sqldeveloper/defaults.yaml
@@ -30,6 +30,7 @@ sqldeveloper:
 
   prefs:
     user:
+    group:
     #See http://www.thatjeffsmith.com/archive/2014/05/migrating-oracle-sql-developer-connections-with-passwords/
     xmlurl: 
     xmldir:
